# geo

./: .gitignore  .pkg  CMakeLists.txt  README.md
.github/workflows/: linux.yml  unix.yml  windows.yml
cmake/: clang-tidy.cmake  pkg.cmake
include/geo/: area_db.h  box.h  cluster_nearby.h  constants.h  fixed_latlng.h  latlng.h  point_rtree.h  polygon.h  polyline.h  polyline_format.h  rad_deg.h  simplify.h  simplify_mask.h  tile.h  webmercator.h  xyz.h
include/geo/detail/: register_box.h  register_latlng.h  register_polygon.h  register_polyline.h
include/motis/geo/: constants.h  latlng.h  polygon.h  polyline.h
include/motis/geo/detail/: register_latlng.h  register_polygon.h
src/: cluster_nearby.cc  latlng.cc  point_rtree.cc  polygon.cc  polyline.cc  simplify.cc  simplify_mask.cc  tile.cc
test/: box_test.cc  catch.hpp  catch_main.cc  latlng_test.cc  point_rtree_test.cc  polyline_format_test.cc  polyline_test.cc  simplify_mask_test.cc  simplify_test.cc  tile_test.cc  webmercator_test.cc  xyz_test.cc
